# ChangeLog for gnome-base/nautilus
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-base/nautilus/ChangeLog,v 1.311 2009/05/15 20:03:57 klausman Exp $

  15 May 2009; Tobias Klausmann <klausman@gentoo.org>
  nautilus-2.24.2-r3.ebuild:
  Stable on alpha, bug #269186

  14 May 2009; Markus Meier <maekke@gentoo.org> nautilus-2.24.2-r3.ebuild:
  amd64/x86 stable, bug #269186

  14 May 2009; Nirbheek Chauhan <nirbheek@gentoo.org>
  nautilus-2.26.2-r1.ebuild:
  Add description for nautilus-flipping-out patch

*nautilus-2.26.2-r1 (14 May 2009)

  14 May 2009; Nirbheek Chauhan <nirbheek@gentoo.org>
  -nautilus-2.26.2.ebuild, +nautilus-2.26.2-r1.ebuild,
  +files/nautilus-2.26.2-change-reg-desktop-file-with-no-desktop.patch:
  Add patch to prevent nautilus from flipping out when not managing the
  desktop. Fixes bug 266398

  11 May 2009; Brent Baude <ranger@gentoo.org> nautilus-2.24.2-r3.ebuild:
  stable ppc64, bug 269186

*nautilus-2.26.2 (10 May 2009)

  10 May 2009; Gilles Dartiguelongue <eva@gentoo.org>
  -nautilus-2.20.0-r1.ebuild,
  -files/nautilus-2.20.0-async-thumbnail-framing.patch,
  -files/nautilus-2.20.0-exempi.patch,
  -files/nautilus-2.20.0-fix_broken_configure.patch,
  -files/nautilus-2.20.0-small-font-crasher.patch,
  -files/nautilus-2.20.0-sound-preview-cleanup.patch,
  -files/nautilus-2.20.0-statfs.patch,
  -files/nautilus-2.20.0-thumbnail-flashing.patch,
  -files/nautilus-2.22.3-open-folder.patch,
  -files/nautilus-2.22.3-preserve-metadata.patch,
  -files/nautilus-2.22.3-prevent-recursive-mvcp.patch,
  -nautilus-2.22.5.1-r1.ebuild, -files/nautilus-2.22.5.1-exempi.patch,
  -files/nautilus-2.22.5.1-fix-stat-include.patch,
  -files/nautilus-2.22.5-ask-what-to-do.patch, -nautilus-2.24.2-r1.ebuild,
  -nautilus-2.24.2-r2.ebuild, +nautilus-2.26.2.ebuild:
  New version for GNOME 2.26. Drop libgnome/gnome-vfs, merge eel, support
  crossfades of desktop background, and more. Clean up old revisions.
