@@ -5,8 +5,10 @@ AUX nautilus-2.24.2-thumbnail-scaling.patch 2597 RMD160 b82748147f709118b060224a
 AUX nautilus-2.26.2-change-reg-desktop-file-with-no-desktop.patch 1421 RMD160 e4d745be6f938f5390fba74db0645534f60d9207 SHA1 21906f957df5b2f93ab6b34223405dd5f594b12e SHA256 687040243006b5698ec062305cb26bf5cd80c9ce1b8bc67f3025af134d3a242a
 DIST nautilus-2.24.2.tar.bz2 5356516 RMD160 a0159b7a6814a731bdbbcee33f4c6aafaee4c8ef SHA1 9bc2cf110ae50d69633095aa8115cf89c095ef42 SHA256 a793ebe4245656f0ae23d5a87895555182f62943e02e9667303ad20c4e690c1d
 DIST nautilus-2.26.2.tar.bz2 5913284 RMD160 89e64013e3d2645677e2fda191b204b0ee43a011 SHA1 db49ea2ff358b7af857257f4f085b03b517d7b3f SHA256 c88a041667acb9085b7874acc6c6997317cc830d25d4d8c4b771e4cc4df15294
-EBUILD nautilus-2.24.2-r3.ebuild 2167 RMD160 6e613953277800530e113c9f51f65f711ac8d736 SHA1 67cbe8185b6179c030eae5a5cec78e3498fad6e0 SHA256 09789f9730abe65811c97c2cdd7747d78ce5c975fd70153a8eea97ef0af0a1a3
+DIST nautilus-2.26.3.tar.bz2 5913186 RMD160 ba8b6dcd14c9d8615900d5ec236555223b3c315e SHA1 e9ec2daac93eac185cef42a688c3ebefcca1f7fe SHA256 1d877362a0f1eea68c2945ef6b2770e0da19d4a0c81c49fb5ebe478fd5e0dfe1
+EBUILD nautilus-2.24.2-r3.ebuild 2162 RMD160 ff2278c6a259993c97136b41068359495da65965 SHA1 2a443e4854f7753012030b438c0c655fcffb1853 SHA256 929a9e3fb557fd2e702f84cdd9054627934b1ddc77bb1627a0bcf307ea1e79ec
 EBUILD nautilus-2.24.2.ebuild 1754 RMD160 f3fd2696e5ba99a3e0585fcbcbe85d2fee345536 SHA1 278fa6e3c9ccffda2a6bd8770d67c44fbe4991d1 SHA256 ad3c2e51f5b792d1794914a4e4c0e7150f9e575ea1d5dcc6faab7f46bb562506
 EBUILD nautilus-2.26.2-r1.ebuild 2432 RMD160 071c2244d39509e671340436172aba758815e6b9 SHA1 1d30402e44badc769bfa83635a226e407e6b7f57 SHA256 fd8fb44958628459c7b0414e8b317d64b2c3ee416ff465cc7dbd1bd20f06289c
-MISC ChangeLog 44787 RMD160 43e3c33fd5367e15d2676118fae35a06c030c0fc SHA1 4ba54bc420d1e54921114d5cecb48f593a2f8e8a SHA256 644d5193afa05ece0fdea2bf6d9be435fc17e697c72ee4075d3ba05b95975e1c
+EBUILD nautilus-2.26.3.ebuild 2432 RMD160 e50c0d7982e7b9c3c8d6e686d21b4704230d8092 SHA1 ed0c8df4905680e430eee1b4fd1d7c95c28359a5 SHA256 932c4d70e7a78fc13a2827b909ee7a179946a683462ad40f4b3222c4ba74a6b3
+MISC ChangeLog 45042 RMD160 c6654a1a8b91154d80baa9fa3d379f9654544f4a SHA1 760f8824eafe938e36bb29fec8ffff80c3d2cb31 SHA256 d9ae3b7ddaceaca0811d6a24f853451642fcdbd86fb859a21185ded3878beb93
 MISC metadata.xml 473 RMD160 d06a14b541ddb9774c9d81895146a14557c196fd SHA1 99497b8bede2582b76a802d7c3f75adbad6fc9a0 SHA256 8e0fbacc02474a585de7d90b28041754ae260c032ef32952ed5da3e0cc377dfc
