@@ -1,6 +1,15 @@
 # ChangeLog for gnome-base/nautilus
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/nautilus/ChangeLog,v 1.311 2009/05/15 20:03:57 klausman Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/nautilus/ChangeLog,v 1.313 2009/05/18 21:19:46 eva Exp $
+
+*nautilus-2.26.3 (18 May 2009)
+
+  18 May 2009; Gilles Dartiguelongue <eva@gentoo.org>
+  +nautilus-2.26.3.ebuild:
+  Bump to 2.26.3. Small enhancements.
+
+  18 May 2009; Jeroen Roovers <jer@gentoo.org> nautilus-2.24.2-r3.ebuild:
+  Stable for HPPA (bug #269186).
 
   15 May 2009; Tobias Klausmann <klausman@gentoo.org>
   nautilus-2.24.2-r3.ebuild:
